<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/but_minus"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/but_minus"
        android:text="@string/plus"
        android:textSize="15pt" />

    <Button
        android:id="@+id/but_minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/but_multi"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/but_multi"
        android:text="@string/minus"
        android:textSize="15pt" />

    <Button
        android:id="@+id/but_multi"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/but_del"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/but_del"
        android:text="@string/multi"
        android:textSize="15pt" />

    <Button
        android:id="@+id/but_del"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/res_box"
        android:layout_marginTop="15dp"
        android:text="@string/del"
        android:textSize="15pt" />

    <Button
        android:id="@+id/but_equal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/but_del"
        android:layout_marginTop="80dp"
        android:text="@string/equal"
        android:textSize="15pt" />

    <EditText
        android:id="@+id/textBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/name"
        android:layout_centerInParent="true"
        android:digits="1234567890.-/+*"
        android:hint="@string/hint"
        android:imeOptions="actionDone"
        android:inputType="number" />

    <TextView
        android:id="@+id/res_box"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_below="@id/textBox"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:text="@string/hintRes"
        android:textSize="25sp" />


</RelativeLayout>